Scenario-3/demo-client-service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: demo-client
  name: demo-client
  selfLink: /api/v1/namespaces/default/services/demo-client
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30173
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    run: demo-client
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
